--- a/Web.Framework/Web.config
+++ b/Web.Framework/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="APIService" value="http://localhost:5001" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
